@@ -11,11 +11,23 @@ public class TobeStudents {
     private final List<TobeStudent> students;
 
     public TobeStudents(List<TobeStudent> students) {
-        this.students = students;
+        this.students = new ArrayList<>(students);
     }
 
     public TobeStudents(TobeStudent... students) {
-        this(new ArrayList<>(List.of(students)));
+        this(List.of(students));
+    }
+
+    public void add(TobeStudent student) {
+        students.add(student);
+    }
+
+    public int size() {
+        return students.size();
+    }
+
+    public List<TobeStudent> getStudents() {
+        return Collections.unmodifiableList(students);
     }
 
     @Override
@@ -29,17 +41,5 @@ public class TobeStudents {
     @Override
     public int hashCode() {
         return Objects.hash(students);
-    }
-
-    public void add(TobeStudent student) {
-        students.add(student);
-    }
-
-    public int size() {
-        return students.size();
-    }
-
-    public List<TobeStudent> getStudents() {
-        return Collections.unmodifiableList(students);
     }
 }
